--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <title>MERN APP</title>
 </head>
 <body>
+    <div id="app"></div>
     <script type="text/javascript" src="/dist/bundle.js"></script>
 </body>
 </html>
